# slappyshot

./: Cargo.toml  README.md  flake.nix  result  slappyshot.desktop
src/: app.rs  config.rs  main.rs  render.rs  style.rs  tools.rs
