[package]
name = "slappyshot"
version = "0.21.0"
edition = "2024"
description = "Screenshot annotation tool"

[[bin]]
name = "slappyshot"
path = "src/main.rs"

[dependencies]
eframe    = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui      = "0.29"
image     = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
toml      = "1"
chrono    = "0.4"
xdg       = "3"
anyhow    = "1"
hex_color = { version = "3", features = ["serde"] }
ab_glyph  = "0.2"
imageproc = "0.25"
arboard   = "3"
notosans  = "0.1"

[build-dependencies]
clap          = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.3"
